<resources>
    <string name="app_name">ScannerTable</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_template">Choose template</string>
    <string name="choose_path">Choose path</string>
    <string name="create_template">Create template</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
    <string name="add_variant">Add variant</string>
    <string name="json_text">JSON text</string>
    <string name="no_found">No found</string>
    <string name="input_name_file">Введите название файла</string>
    <string name="cancel">cansel</string>
    <string name="back">back</string>
</resources>